add document info api & interest term api
